--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script>
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/darts.json", {onProgress: UnityProgress});
     </script>
+
+   <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
+
   </head>
   <body>
     <div class="webgl-content">
