--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/darts.json", {onProgress: UnityProgress});
       vkBridge.send('VKWebAppInit');
       function AdInit () {vkBridge.send('VKWebAppInit');}
-      function showAd(){bridge.send("VKWebAppCheckNativeAds", {"ad_format": "interstitial"});}
+      function showAd(){bridge.send("VKWebAppCheckNativeAds", {"ad_format": "interstitial"});
+                         bridge.send("VKWebAppShowNativeAds", {ad_format:"interstitial"})
+                                                              .then(data => console.log(data.result))
+                                                              .catch(error => console.log(error));
+                       }
+      
     </script>
 
   </head>
