--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <script>
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/darts.json", {onProgress: UnityProgress});
       vkBridge.send('VKWebAppInit');
-      function AdInit () {vkBridge.send('VKWebAppInit');}
+      function AdInit () {alert( "Привет" );
+                          vkBridge.send('VKWebAppInit');}
       function showAd(){bridge.send("VKWebAppCheckNativeAds", {"ad_format": "interstitial"});
                          bridge.send("VKWebAppShowNativeAds", {ad_format:"interstitial"})
                                                               .then(data => console.log(data.result))
