--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <script>
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/darts.json", {onProgress: UnityProgress});
       vkBridge.send('VKWebAppInit');
-      function AdInit () {alert( "Привет" );
-                          vkBridge.send('VKWebAppInit');}
+      alert( "Привет" );
       function showAd(){bridge.send("VKWebAppCheckNativeAds", {"ad_format": "interstitial"});
                          bridge.send("VKWebAppShowNativeAds", {ad_format:"interstitial"})
                                                               .then(data => console.log(data.result))
