--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                                                               .then(data => console.log(data.result))
                                                               .catch(error => console.log(error));
                        
-      
+      alert( "Kek" );
     </script>
 
   </head>
