--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="Build/UnityLoader.js"></script>
     <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
     <script type="module">
-      import bridge from '@vkontakte/vk-bridge';
+      import bridge from 'https://unpkg.com/@vkontakte/vk-bridge';
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/darts.json", {onProgress: UnityProgress});
       vkBridge.send('VKWebAppInit');
       
